- added sound for trump; - added search to tables index page; - added animation to received cards and current player; - sort suites by interleaving colour; - sort hands by suite consistently; - allow preparing move before turn; - pre-fill bid to latest number; - show special text on game series completed; - avoid previous trick flicker on making trick first move; - fixed checking trump condition; - fixed checking wheels condition; - fixed adding blind bonus.

--- a/deckathlon/static/site.css
+++ b/deckathlon/static/site.css
@@ -3,7 +3,7 @@
  *
  * @author    Erki Suurjaak
  * @created   18.04.2020
- * @modified  13.05.2020
+ * @modified  14.05.2020
  */
 
 body {
@@ -46,6 +46,10 @@ input[type=password] {
   font-size:        1em;
   padding:          5pt 8pt;
   width:            100pt;
+}
+input[type=search] {
+  padding:          5pt 8pt;
+  width:            60pt;
 }
 input[type=number] {
   font-size:        0.9em;
@@ -182,29 +186,39 @@ body.index #appdialog select {
   display:          flex;
   flex-direction:   column;
 }
-#index table.tables {
+#index div.tables {
+  height:           calc(100% - 30pt);
   min-width:        400pt;
-}
-#index table.tables th:first-child,
-#index table.tables td:first-child {
-  min-width:        200pt;
-}
-#index table.tables th:last-child,
-#index table.tables td:last-child {
+  overflow-y:       auto;
   text-align:       right;
 }
-#index table.tables td:first-child,
-#index table.tables td:last-child {
+#index div.tables input[type=search] {
+  margin-bottom:    5pt;
+  padding:          2pt 4pt;
+}
+#index div.tables table {
+  width:            calc(100% - 15pt);
+}
+#index div.tables th:first-child,
+#index div.tables td:first-child {
+  min-width:        200pt;
+}
+#index div.tables th:last-child,
+#index div.tables td:last-child {
+  text-align:       right;
+}
+#index div.tables td:first-child,
+#index div.tables td:last-child {
   position:         relative;
 }
-#index table.tables td span.tag {
+#index div.tables td span.tag {
   font-size:        0.8em;
   opacity:          0.8;
   position:         absolute;
   top:              1pt;
   right:            -10pt;
 }
-#index table.tables td:first-child span.tag {
+#index div.tables td:first-child span.tag {
   color:            white;
   left:             -10pt;
   right:            unset;
@@ -323,7 +337,7 @@ div.player div.name.turn::after {
 div.player div.name.offline {
   filter:           grayscale(100%);
 }
-div.player div.name.offline::after {
+div.player div.name span.offline::after {
   content:          "⛅"; /* Sun behind cloud &#9925; */
 }
 
@@ -634,7 +648,7 @@ div.tabletop div.moves div.trick div.stack {
 /** Spectators styling. */
 div.table div.spectators {
   position:         absolute;
-  top:              70pt;
+  top:              75pt;
   right:            0;
   color:            white;
   font-size:        0.7em;
@@ -854,7 +868,7 @@ div.table div.distribute div.player.pos2of4,
 div.table div.distribute div.player.pos3of6,
 div.table div.distribute div.player.pos4of8 {
   top:              5pt;
-  left:             calc(50% - 50pt);
+  left:             0;
 }
 div.table div.distribute div.player.pos3of5,
 div.table div.distribute div.player.pos4of6,
@@ -894,6 +908,10 @@ div.tabletop div.extra div.opts {
   font-size:        0.8em;
   text-align:       right;
 }
+div.tabletop div.extra div.talon + div.opts {
+  position:         relative;
+  top:              5pt;
+}
 div.tabletop div.extra div.opts div.trump > div {
   border:           2pt solid black;
   border-radius:    5pt;
@@ -926,6 +944,37 @@ div.tabletop div.gameover table.score {
 }
 div.tabletop div.gameover table.score .bid {
   text-align:       left;
+}
+
+
+/** Animation styling. */
+@keyframes pulse {
+  0%   { transform: scale(1);  }
+  50%  { transform: scale(1.2); z-index: 1; }
+  100% { transform: scale(1); }
+}
+@keyframes boggle {
+  0%                { top: 0; }
+  0.4%              { top: -5pt; }
+  0.8%              { top: 0; }
+  1.2%              { top: -5pt; }
+  1.6%              { top: 0; }
+  2.0%              { top: -5pt; }
+  2.4%              { top: 0; }
+  2.8%              { top: -5pt; }
+  3.2%              { top: 0; }
+  3.6%              { top: -5pt; }
+  4.0%              { top: 0; }
+}
+.pulse {
+  animation: pulse 0.4s 5 linear;
+}
+div.player div.name.pulse {
+  animation: unset;
+}
+div.player div.name.pulse::after {
+  animation:        boggle 60s infinite linear;
+  position:         relative;
 }
 
 
